<resources>
    <string name="app_name">apay-user-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="todo">todo</string>

    <string name="main_card_title_string">페이머니</string>
    <string name="payment_button_string">결제</string>
    <string name="main_balance_title_text">잔액</string>

    <string name="confirm">확인</string>
    <string name="pay_complete">PAY_COMPLETE</string>
    <string name="payment_cancel">결제취소</string>
    <string name="payment_cancel_requested">결제취소 요청중</string>

    <string name="easypassword_text_01"><u>간편비밀번호를 잊어버리셨나요?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_pay_register"><u>A-Pay 에 등록하지 않으셨나요?</u></string>

    <string name="jointerms_text_01">서비스 이용약관 동의</string>
    <string name="jointerms_text_02">아래의 내용에 모두 동의합니다</string>
    <string name="jointerms_text_03">[필수]서비스 표준 이용 약관</string>
    <string name="jointerms_text_04">[선택]서비스 표준 이용 약관</string>

    <string name="telecom_prompt">통신사</string>
    <string-array name="telecom_arrays">
        <item>SKT</item>
        <item>KT</item>
        <item>LGT</item>
    </string-array>
    <string name="title_activity_card_use_detail">CardUseDetailActivity</string>
    <string name="add_bank_account"><u>계좌 추가하기</u></string>
    <string name="skip">건너뛰기</string>
    <string name="refresh"><u>새로고침</u></string>
    <string name="input_id_for_register">아이디 입력 <font fgcolor="#FF0000">*</font></string>
    <string name="input_password_for_register">패스워드 입력 <font fgcolor="#FF0000">*</font></string>
    <string name="input_password_confirm_for_register">패스워드 확인 <font fgcolor="#FF0000">*</font></string>
    <string name="input_phone_number_for_register">휴대폰 인증 <font fgcolor="#FF0000">*</font></string>
    <string name="payment_amount_title_text"><b>결제금액</b></string>
    <string name="payment_date_title_text"><b>결제일시</b></string>
    <string name="payment_shop_name_title_text"><b>가맹점</b></string>
    <string name="input_user_name_for_register_account">이름 입력 <font fgcolor="#FF0000">*</font></string>
    <string name="ssn">주민번호 앞자리(예. 990101 - 1) <font fgcolor="#FF0000">*</font></string>
    <string name="current_input_password_for_change">기존 비밀번호 입력 <font fgcolor="#FF0000">*</font></string>
</resources>
